--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore macOS .DS_Store files
 *.DS_Store
 
-# Ignore latex build files everywhere
+# Ignore latex build files
 *.aux
 *.fdb_latexmk
 *.fls
@@ -9,5 +9,3 @@
 *.out
 *.synctex.gz
 *.toc
-
-# Ignore build files for the main document
